--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,39 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
       rel="stylesheet"
     />
-    <script src="https://lib.arvancloud.com/ar/videojs-vast-vpaid/2.0.2/VPAIDFlash.swf"></script>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="//googleads.github.io/videojs-ima/node_modules/video.js/dist/video-js.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="//googleads.github.io/videojs-ima/node_modules/videojs-contrib-ads/dist/videojs.ads.css"
+    />
+    <link
+      rel="stylesheet"
+      href="//googleads.github.io/videojs-ima/dist/videojs.ima.css"
+    />
+    <script src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+    <script src="//googleads.github.io/videojs-ima/node_modules/videojs-contrib-ads/dist/videojs.ads.min.js"></script>
+    <script src="//googleads.github.io/videojs-ima/dist/videojs.ima.js"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-179083340-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-179083340-1");
+    </script>
+    <meta name="clckd" content="d6419336b2732f95eaf2f07ffea7534b" />
   </head>
   <body>
     <app-root></app-root>
